--- a/model.ipynb
+++ b/model.ipynb
@@ -1267,6 +1267,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model 3 has the highest accuracy in validate set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
