--- a/model.ipynb
+++ b/model.ipynb
@@ -32,11 +32,9 @@
     "from sklearn.tree import DecisionTreeClassifier, plot_tree, export_text\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.tree import export_graphviz\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
     "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
