--- a/model.ipynb
+++ b/model.ipynb
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
        "RandomForestClassifier(max_depth=10, random_state=123)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
        "0.8551307847082495"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7383177570093458"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#model score for validate set\n",
+    "clf.score(X_validate, y_validate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -936,6 +957,8 @@
        "      <th>Q</th>\n",
        "      <th>S</th>\n",
        "      <th>model5</th>\n",
+       "      <th>model6</th>\n",
+       "      <th>model7</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -951,6 +974,8 @@
        "      <td>First</td>\n",
        "      <td>Cherbourg</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -970,6 +995,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
@@ -985,6 +1012,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1002,6 +1031,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
@@ -1018,6 +1049,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1031,15 +1064,15 @@
        "218         1       1  female  32.000000      0      0   76.2917  First   \n",
        "31          1       1  female  29.916875      1      0  146.5208  First   \n",
        "\n",
-       "     embark_town  alone  Q  S  model5  \n",
-       "583    Cherbourg      1  0  0       0  \n",
-       "337    Cherbourg      1  0  0       1  \n",
-       "50   Southampton      0  0  1       0  \n",
-       "218    Cherbourg      1  0  0       1  \n",
-       "31     Cherbourg      0  0  0       1  "
+       "     embark_town  alone  Q  S  model5  model6  model7  \n",
+       "583    Cherbourg      1  0  0       0       0       0  \n",
+       "337    Cherbourg      1  0  0       1       1       1  \n",
+       "50   Southampton      0  0  1       0       0       0  \n",
+       "218    Cherbourg      1  0  0       1       1       1  \n",
+       "31     Cherbourg      0  0  0       1       1       1  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1139,7 @@
        "1          53  137"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1206,7 @@
        "1         0.106640  0.275654"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,37 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#use confusion matrix code\n",
-    "[tn, fn], [fp,  tp] = confusion_matrix(y_train, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(137, 288, 53, 19)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tp, tn, fp, fn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1294,7 @@
        "support    307.000000  190.000000  0.855131  497.000000    497.000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,14 +1313,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Model 5 Accuracy score is: 79.07%\n",
+      "Random Forest Model 5 Accuracy score is: 85.51%\n",
       "Random Forest Model 5 Precision score is: 87.82%\n",
       "Random Forest Model 5 Recall score is: 72.11%\n",
       "Random Forest Model 5 F1 score is: 79.19%\n"
@@ -1387,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1409,7 @@
        "RandomForestClassifier(max_depth=15, min_samples_leaf=3, random_state=123)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -1437,19 +1440,40 @@
        "0.7907444668008048"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#second RF model score\n",
+    "#second RF model train score\n",
     "clf.score(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7429906542056075"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#second RF model validate score\n",
+    "clf.score(X_validate, y_validate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1625,7 @@
        "31     Cherbourg      0  0  0       1       1       1  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1650,13 +1674,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>280</td>\n",
-       "      <td>27</td>\n",
+       "      <td>273</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>64</td>\n",
-       "      <td>126</td>\n",
+       "      <td>70</td>\n",
+       "      <td>120</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1665,11 +1689,11 @@
       "text/plain": [
        "model6      0    1\n",
        "survived          \n",
-       "0         280   27\n",
-       "1          64  126"
+       "0         273   34\n",
+       "1          70  120"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1681,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1715,33 +1739,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>precision</th>\n",
-       "      <td>0.813953</td>\n",
-       "      <td>0.823529</td>\n",
-       "      <td>0.816901</td>\n",
-       "      <td>0.818741</td>\n",
-       "      <td>0.817614</td>\n",
+       "      <td>0.795918</td>\n",
+       "      <td>0.779221</td>\n",
+       "      <td>0.790744</td>\n",
+       "      <td>0.787570</td>\n",
+       "      <td>0.789535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>recall</th>\n",
-       "      <td>0.912052</td>\n",
-       "      <td>0.663158</td>\n",
-       "      <td>0.816901</td>\n",
-       "      <td>0.787605</td>\n",
-       "      <td>0.816901</td>\n",
+       "      <td>0.889251</td>\n",
+       "      <td>0.631579</td>\n",
+       "      <td>0.790744</td>\n",
+       "      <td>0.760415</td>\n",
+       "      <td>0.790744</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f1-score</th>\n",
-       "      <td>0.860215</td>\n",
-       "      <td>0.734694</td>\n",
-       "      <td>0.816901</td>\n",
-       "      <td>0.797454</td>\n",
-       "      <td>0.812229</td>\n",
+       "      <td>0.840000</td>\n",
+       "      <td>0.697674</td>\n",
+       "      <td>0.790744</td>\n",
+       "      <td>0.768837</td>\n",
+       "      <td>0.785590</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>support</th>\n",
        "      <td>307.000000</td>\n",
        "      <td>190.000000</td>\n",
-       "      <td>0.816901</td>\n",
+       "      <td>0.790744</td>\n",
        "      <td>497.000000</td>\n",
        "      <td>497.000000</td>\n",
        "    </tr>\n",
@@ -1751,13 +1775,13 @@
       ],
       "text/plain": [
        "                    0           1  accuracy   macro avg  weighted avg\n",
-       "precision    0.813953    0.823529  0.816901    0.818741      0.817614\n",
-       "recall       0.912052    0.663158  0.816901    0.787605      0.816901\n",
-       "f1-score     0.860215    0.734694  0.816901    0.797454      0.812229\n",
-       "support    307.000000  190.000000  0.816901  497.000000    497.000000"
+       "precision    0.795918    0.779221  0.790744    0.787570      0.789535\n",
+       "recall       0.889251    0.631579  0.790744    0.760415      0.790744\n",
+       "f1-score     0.840000    0.697674  0.790744    0.768837      0.785590\n",
+       "support    307.000000  190.000000  0.790744  497.000000    497.000000"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1808,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -1817,7 +1841,7 @@
        "RandomForestClassifier(max_depth=20, min_samples_leaf=2, random_state=123)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1829,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1839,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1848,19 +1872,40 @@
        "0.8169014084507042"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#second RF model score\n",
+    "#second RF model train score\n",
     "clf.score(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7476635514018691"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#second RF model validate score\n",
+    "clf.score(X_validate, y_validate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -2012,7 +2057,7 @@
        "31     Cherbourg      0  0  0       1       1       1  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2025,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2125,7 @@
        "1          64  126"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2115,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2125,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -2134,7 +2179,7 @@
        "RandomForestClassifier(max_depth=13, random_state=123)"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2146,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2156,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -2165,19 +2210,40 @@
        "0.8591549295774648"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#second RF model score\n",
+    "#second RF model score train set\n",
     "clf.score(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7336448598130841"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#second RF model score with validate set\n",
+    "clf.score(X_validate, y_validate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -2329,7 +2395,7 @@
        "31     Cherbourg      0  0  0       1       1       1  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2342,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -2397,7 +2463,7 @@
        "1          52  138"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2409,14 +2475,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Model 7 Accuracy score is: 85.92%\n",
+      "Random Forest Model 7 Precision score is: 88.46%\n",
+      "Random Forest Model 7 Recall score is: 72.63%\n",
+      "Random Forest Model 7 F1 score is: 79.77%\n"
+     ]
+    }
+   ],
    "source": [
-    "print(f'Random Forest Model 6 Accuracy score is: {clf.score(X_train, y_train):.2%}')\n",
-    "print(f'Random Forest Model 6 Precision score is: {precision_score(train.survived, train.model6):.2%}')\n",
-    "print(f'Random Forest Model 6 Recall score is: {recall_score(train.survived, train.model6):.2%}')\n",
-    "print(f'Random Forest Model 6 F1 score is: {f1_score(train.survived, train.model6):.2%}')"
+    "print(f'Random Forest Model 7 Accuracy score is: {clf.score(X_train, y_train):.2%}')\n",
+    "print(f'Random Forest Model 7 Precision score is: {precision_score(train.survived, train.model7):.2%}')\n",
+    "print(f'Random Forest Model 7 Recall score is: {recall_score(train.survived, train.model7):.2%}')\n",
+    "print(f'Random Forest Model 7 F1 score is: {f1_score(train.survived, train.model7):.2%}')"
    ]
   },
   {
@@ -2445,6 +2522,13 @@
     "<br>\n",
     "\n",
     "- clf= RandomForestClassifier(min_samples_leaf = 1, max_depth = 13, random_state= 123) <--- this gives highest score of **85.92%** accuracy in train set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- I would use Recall because we do not want to miss any positive cases"
    ]
   },
   {
